# team-operations

./: .gitignore  .mcp.json  CLAUDE.md  README.md  generate-slides.py  pyproject.toml
.claude/commands/: create-weekly-report.md
.claude/skills/attendance/: SKILL.md
.claude/skills/gmail/: SKILL.md
.claude/skills/google-calendar/: SKILL.md
.claude/skills/google-drive/: SKILL.md
.claude/skills/infra-request/: SKILL.md
.claude/skills/slides-maker/: SKILL.md
.claude/skills/slides-maker/references/: design-system.md  qa-and-design-guide.md  松尾研究所テンプレ_v2_DLしてお使いください.pptx
.claude/skills/weekly-report/: SKILL.md  template.md
.claude/skills/weekly-report-review/: SKILL.md
.claude_commands/: review-weekly-report.md
